<resources>
    <!--Start Screen-->
    <string name="app_name">EasyBook</string>
    <string name="listen_to_your_favourite_books">Слушайте свои\nлюбимые книги</string>
    <string name="with_over_million_volumes_of_spoken_audio_content_such_as_podcasts_audiobooks">Более миллиона единиц аудиоконтента, такого как подкасты, аудиокниги…</string>
    <string name="men_listen_audiobooks">Мужчина слушает аудиокниги</string>
    <string name="get_started">Начать</string>

    <!--Main Screen-->
    <string name="good_afternoon">Добрый день,</string>
    <string name="good_morning">Доброе утро,</string>
    <string name="good_evening">Добрый вечер,</string>
    <string name="good_night">Доброй ночи,</string>
    <string name="have_a_good_day">Готовы к новой истории?</string>
    <string name="women_listen_audiobook">Женщина слушает аудиокнигу</string>
    <string name="discover">Обзор</string>
    <string name="player">Плеер</string>
    <string name="player_icon">Иконка плеера</string>
    <string name="profile_icon">Иконка профиля</string>
    <string name="globe_icon">Иконка глобуса</string>
    <string name="profile">Профиль</string>
    <string name="search_icon">Иконка поиска</string>
    <string name="search">Поиск книг или циклов</string>
    <string name="clear_search">Очистить поиск</string>
    <string name="categories">Категории</string>
    <string name="view_more">Смотреть все</string>
    <string name="try_again">Попробовать снова</string>
    <string name="unknown">Неизвестно</string>
    <string name="no_internet_connection">Нет подключения к Интернету</string>
    <string name="could_not_load_books">Не удалось загрузить книги</string>
    <string name="no_internet">Нет Интернета</string>
    <string name="scroll_to_top">Прокрутить вверх</string>
    <string name="found_in_series">Найдено в сериях</string>
    <string name="found_in_books">Найдено в книгах</string>
    <string name="books_fallback">книг</string>
    <string name="not_found_hint">По вашему запросу ничего не найдено</string>
    <string name="not_found">Пусто</string>

    <!--Categories Screen-->
    <string name="category_icon">Иконка категории</string>
    <string name="categories_title">Категории</string>
    <string name="category_image_desc">Изображение категории</string>
    <string name="back">Назад</string>

    <string-array name="category_names">
        <item>Фэнтези</item>
        <item>Триллер</item>
        <item>Драма</item>
        <item>Бизнес</item>
        <item>Биографии</item>
        <item>Детские</item>
        <item>История и культура</item>
        <item>Классика</item>
        <item>Здоровье</item>
        <item>Иностранные языки</item>
        <item>Нон-фикшн</item>
        <item>Образование</item>
        <item>Поэзия</item>
        <item>Приключения</item>
        <item>Психология</item>
        <item>Разное</item>
        <item>Ранобэ</item>
        <item>Религия</item>
        <item>Роман</item>
        <item>Криминал</item>
        <item>Ужасы</item>
        <item>Эзотерика</item>
        <item>Юмор</item>
    </string-array>

    <!--Collection Screen-->
    <string name="collection_title">Заголовок коллекции</string>
    <string name="collection_is_empty_title">Здесь пока пусто</string>

    <!--Book info Screen-->
    <string name="download">Скачать</string>
    <string name="add_to_bookmarks">Добавить книгу в закладки</string>
    <string name="could_not_load_book">Не удалось загрузить книгу</string>
    <string name="info">Информация</string>
    <string name="episodes">Эпизоды</string>
    <string name="author">Автор:</string>
    <string name="reader">Чтец:</string>
    <string name="duration">Длительность:</string>
    <string name="mark_as_listened">Отметить прослушанной</string>
    <string name="remove_from_listened">Удалить из прослушанного</string>
    <string name="download_complete">Скачивание завершено</string>
    <string name="please_wait">Подождите минутку…</string>
    <string name="download_to_device_folder">Скачивать в папку на устройстве</string>
    <string name="downloads">Скачанное</string>
    <string name="download_folder_hint">Будет скачиваться в папку Download</string>
    <string name="downloaded">Скачанное</string>
    <string name="go_to_downloaded">Открыть скачанное</string>
    <string name="delete_book">Удалить из скачанного</string>
    <string name="delete_book_sure">Вы уверены, что хотите удалить эту книгу?</string>
    <string name="delete">Удалить</string>
    <string name="cancel">Отмена</string>

    <!--Profile Screen-->
    <string name="edit">Редактировать</string>
    <string name="default_username">Пользователь</string>
    <string name="settings">Настройки</string>
    <string name="logout">Выйти</string>
    <string name="share">Поделится приложением</string>
    <string name="rateUs">Оцените нас</string>
    <string name="bookmarks">Закладки</string>
    <string name="listened">Прослушано</string>
    <string name="listen">Слушаю</string>
    <string name="share_title">Поделится с помощью</string>
    <string name="share_text">Хватит платить за аудиокниги! 💥\n\nПопробуй EasyBook — тысячи бесплатных аудиокниг в одном удобном приложении. Никаких подписок, просто слушай.\n\nСкачивай здесь: https://4pda.to/forum/index.php?showtopic=1114314</string>

    <!--Edit Profile Screen-->
    <string name="information_account">Информация</string>
    <string name="save">Сохранить</string>
    <string name="full_name">Имя пользователя</string>

    <!--Player Screen-->
    <string name="previous">Назад</string>
    <string name="play">Играть</string>
    <string name="next">Дальше</string>
    <string name="nothing_is_playing">Ничего не проигрывается</string>
    <string name="audiobook">Аудиокнига</string>

    <string name="sleep_timer">Таймер сна</string>
    <string name="timer_off">Выключен</string>
    <string name="timer_5_min">5 минут</string>
    <string name="timer_15_min">15 минут</string>
    <string name="timer_30_min">30 минут</string>
    <string name="timer_45_min">45 минут</string>
    <string name="timer_60_min">60 минут</string>
    <string name="timer_end_of_chapter">Конец главы</string>

    <string name="playback_speed">Скорость воспроизведения</string>
    <string name="speed_1_0x">1.00x</string>


    <string name="welcome_back">Добро пожаловать!</string>
    <string name="login_description">Войдите, чтобы синхронизировать ваши книги и прогресс на всех устройствах.</string>
    <string name="error_auth">Ошибка аутентификации. Попробуйте позже.</string>
    <string name="email_exist">Эта почта уже привязана к другому способу входа</string>
    <string name="google">Google</string>
    <string name="github">GitHub</string>
    <string name="anonimous_login">Войти анонимно</string>
    <string name="yandex">Яндекс</string>

    <!-- Settings Screen -->
    <string-array name="folder_naming_options">
        <item>Только название</item>
        <item>Автор - Название</item>
        <item>Автор - Название (Чтец)</item>
    </string-array>
    <string name="folder_naming_title">Название папок</string>
</resources>